--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
     "@caporal/core": "^2.0.2",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
