--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
   "homepage": "https://github.com/mirfan46/Tugas-Bootcamp#readme",
   "dependencies": {
     "@caporal/core": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.5"
+    "cheerio": "^1.0.0-rc.5",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.17.1"
   },
   "devDependencies": {
     "jest": "^26.6.3"
